manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  selector:
    app: flask
  ports:
  - port: 80
    targetPort: 9090
